--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ python:
 install:
   - pip install -r requirements.txt
 script:
-  - nosetests -dsv --with-yanc --with-coverage --cover-package . "tests/test_*.py"
+  - nosetests -dsv --with-yanc --with-coverage --cover-package . tests/test_*.py
 
